2023-12-04T08:13:19Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7083755448 # 2142
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-12-04
* notice: last 14d: unq all: 12 32
* notice: prev accum: outdated-unq outdated-all / unq all: 804 1481 / 825 1513
* notice: next accum: outdated-unq outdated-all / unq all: 804 1481 / 826 1514
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-11-20 2023-12-04]

2023-12-04T00:46:42Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7080508081 # 2141
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-12-04
* notice: last 14d: unq all: 11 32
* notice: prev accum: outdated-unq outdated-all / unq all: 803 1479 / 825 1513
* notice: next accum: outdated-unq outdated-all / unq all: 804 1481 / 825 1513
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-11-19] / []

2023-12-03T00:49:27Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7073610388 # 2138
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-12-03
* notice: last 14d: unq all: 11 34
* notice: prev accum: outdated-unq outdated-all / unq all: 802 1478 / 825 1513
* notice: next accum: outdated-unq outdated-all / unq all: 803 1479 / 825 1513
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-11-18] / []

2023-12-01T00:51:11Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7054186022 # 2132